# kata_anagrams

./: LICENSE  README.md  pyproject.toml
src/kata_anagrams_weabreu/: anagrams.py
tests/: test_anagrams.py
